<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CrearListadoActivity"
    android:orientation="vertical"
    android:weightSum="3">

    <!--CABECERA - HEADER-->
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleInsert"
            style="@style/butonfont"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descInsert"
            style="@style/labelfont"
            android:gravity="center"
            android:textSize="15sp"/>
    </LinearLayout>

    <!--Listado de palabras-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:weightSum="2">

        <!--Palabras que introduciremos-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                style="@style/butonfont"
                android:textSize="14sp"
                android:gravity="start"
                android:text="@string/listInit"/>

            <EditText
                android:id="@+id/etIntro"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:background="@color/lightBeige"
                style="@style/labelfont"
                />
        </LinearLayout>


        <!--Palabras que obtendremos-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                style="@style/butonfont"
                android:textSize="14sp"
                android:gravity="start"
                android:text="@string/listFinal"/>

            <TextView
                android:id="@+id/tvResult"
                android:layout_height="0dp"
                android:layout_weight="1.75"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:background="@color/lightBeige"
                style="@style/labelfont"/>
                />
        </LinearLayout>

    </LinearLayout>


    <!--Opción núm Palabras a obtener-->
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="6dp"
        android:weightSum="2"
        android:background="@color/lightBeige">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/numPalabras"
            style="@style/labelfont"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spinerNumObtLista"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="wrap_content"
            style="@style/labelfont"
            android:textSize="16sp"/>
    </LinearLayout>

    <!--Boton parqa obtener palabras-->
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnObtenerListRnd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/obtain"
        android:textSize="20sp"
        android:background="@drawable/buttonbck"
        android:layout_weight="0.25" />

</LinearLayout>